Revision history for firebird_fdw

1.3.0	2021-??-??
	- invalid Firebird server port numbers will be rejected

1.2.1	2020-10-21
	- Fix builds for recent Fedora versions

1.2.0	2020-10-17
	- Add support for PostgreSQL 13
	- Add support for generated columns (PostgreSQL 12 and later)
	- Add support for COPY and partition tuple routing (PostgreSQL 11 and later)
	- Add table/column option "quote_identifier"
	- Add server option "quote_identifiers"
	- Have IMPORT FOREIGN SCHEMA add "quote_identifier" where appropriate
	- Add support for implicit boolean columns
	- Push down boolean tests in WHERE clauses where possible
	- Add function firebird_fdw_server_options()
	- Add function firebird_version()
	- When analyzing a foreign table, only retrieve the columns defined in
	  that table
	- Have EXPLAIN for a remote modify show the Firebird query used
	- If a remote query fails, log the query as CONTEXT
	- Explicitly reject INSERT with ON CONFLICT clause
	- Fix UPDATE statements where a BEFORE ROW UPDATE trigger is present
	- Apply CREATE SERVER's "port" option, if provided
	- Prevent tables defined as queries from being set as "updatable = 'true'"

1.1.0	2019-05-31
	- Add utility function "firebird_fdw_close_connections()"
	- Add utility function "firebird_fdw_diag()"
	- Adapt code to deal with tuple-level OID removal in PostgreSQL 12
	- Support for heap access method changes in PostgreSQL 12

1.0.0	2018-11-09
	- Support Firebird BOOLEAN datatype (Firebird 3.0 and later)
	- Improve "IMPORT FOREIGN SCHEMA" implementation
	- Add table option "estimated_row_count"
	- Improve handling of foreign tables defined as Firebird queries
	- Support PostgreSQL 11
	- Adapt code to compile against current PostgreSQL HEAD
	- Avoid segfault if not all expected Firebird connection parameters
	  were supplied

0.5.0	2018-10-12
	- Support triggers on foreign tables (PostgreSQL 9.4 and later)
	- Support Firebird BLOB datatype (TEXT subtype only)

0.4.0   2018-10-02