@@ -1,7 +1,8 @@
 Revision history for firebird_fdw
 
 1.3.0	2021-??-??
-	- invalid Firebird server port numbers will be rejected
+	- Invalid Firebird server port numbers will be rejected
+	- Enable provision of custom Firebird port for TAP tests
 
 1.2.1	2020-10-21
 	- Fix builds for recent Fedora versions
